Issue #215 - Fixed layout bug for login right-sidebar in Firefox

--- a/r2/r2/public/static/css/lightnet.less
+++ b/r2/r2/public/static/css/lightnet.less
@@ -918,3 +918,7 @@ h4.collapsable:not(.collapsed) .glyphicon-collapse-down {
 .sr-interest-bar {
   margin-bottom: 20px;
 }
+
+.form-control {
+  margin: 6px 0;
+}
